force-app/main/default/objects/FEC_Decision_Table__c/FEC_Decision_Table__c.object-meta.xml
<CustomObject>
    <label>Decision Table</label>
    <nameField>
        <label>Decision Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>