force-app/main/default/objects/FEC_Decision_Table__c/fields/FEC_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Process__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Process</label>
    <referenceTo>FEC_Business_Process__c</referenceTo>
    <relationshipLabel>Decision Tables</relationshipLabel>
    <relationshipName>Decision_Tables</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>