force-app/main/default/objects/FEC_Decision_Table__c/fields/FEC_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>